namespace EcommerceAPI.Models;

public static class AuthRoles
{
    public const string Admin = "Admin";
    public const string Customer = "Customer";
}

public static class AuthClaimTypes
{
    public const string CustomerId = "customer_id";
}
