namespace EcommerceAPI.Models;

public enum GiftRuleType
{
    Amount = 0,
    Loyalty = 1,
    Promotion = 2
}
